--- a/environment/.env_template
+++ b/environment/.env_template
@@ -8,3 +8,6 @@ EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 CORS_ALLOWED_ORIGINS=
 CSRF_TRUSTED_ORIGINS=
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+CELERY_CACHE_BACKEND=
