--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,3 +6,6 @@ django-silk==5.0.3
 django-cors-headers==3.14.0
 python-slugify==8.0.1
 Pillow==9.4.0
+celery[redis]==5.2.7
+flower==1.2.0
+django-celery-results==2.4.0
